# SondyEQ

./: .gitignore  CMakeLists.txt
Source/: EQBand.cpp  EQBand.h  EQInterface.cpp  EQInterface.h  FFT.cpp  FFT.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
